--- a/css/style.css
+++ b/css/style.css
@@ -95,17 +95,25 @@ h1 {
     object-fit: cover;
 }
 
-.card-title {
-    font-weight: bold;
-    font-size: 16px;
-}
-
 .card-category {
     background-color: #37268c;
     max-width: fit-content;
     color: #F5F5F5;
     font-size: 10px;
     padding: 5px;
+}
+
+.card-title {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.card-description {
+    color: #828282;
+    height: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 
 .card-price, .cart-price {
@@ -120,6 +128,7 @@ h1 {
 }
 
 aside {
+    width: 100%;
     max-width: 30%;
     display: flex;
     flex-direction: column;
@@ -172,10 +181,11 @@ aside {
 
 #cart-list {
     max-height: 300px;
+    height: 300px;
     overflow-y: scroll;
 }
 
-#cart-list li {
+.cart-item {
     display: flex;
     flex-direction: row;
     padding: 20px;
@@ -198,6 +208,18 @@ aside {
     gap: 10px;
 }
 
+.cart-empty-title {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 30%;
+}
+
+.cart-empty-description {
+    color: #828282;
+    text-align: center;
+}
+
 #cart-tail {
     background-color: #333333;
     padding: 10px;
@@ -215,4 +237,12 @@ aside {
 
 .cart-tail-part span {
     color: #F5F5F5;
+}
+
+.hide {
+    display: none;
+}
+
+.hide-scrollbar {
+    overflow: hidden !important;
 }
