--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,15 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     padding: 10px;
     font-size: 16px;
+}
+
+#menu-nav ul li {
+    width: 85px;
+    transition: 0.5s;
+    text-align: center;
 }
 
 #menu-nav ul li:hover {
@@ -50,8 +56,12 @@ h1 {
     font-weight: bold;
 }
 
-#menu-nav ul li:first-child {
+.bold{
     font-weight: bold; 
+}
+
+#menu-nav ul li:focus {
+    font-weight: bold;  
 }
 
 #content-all {
@@ -64,6 +74,7 @@ h1 {
 
 #content-main {
     max-width: 70%;
+    width: 70%;
 }
 
 #card-list {
@@ -81,6 +92,7 @@ h1 {
     flex-direction: column;
     border: 2px solid #F5F5F5;
     padding: 10px;
+    transition: 0.5s;
 }
 
 .card:hover {
@@ -133,6 +145,21 @@ h1 {
     cursor: pointer;
 }
 
+.card-empty {
+    margin: 20px;
+}
+
+.card-empty-title {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    display: block;
+}
+
+.card-empty-description {
+    text-align: center;
+}
+
 aside {
     width: 100%;
     max-width: 30%;
@@ -153,6 +180,7 @@ aside {
 
 #search {
     width: 70%;
+    height: 35px;
     padding: 10px;
     border: 0;
     box-shadow:#37268C 6px 6px 6px -8px;
@@ -170,6 +198,7 @@ aside {
     color: #F5F5F5;
     width: 25%;
     border: 0;
+    transition: 0.5s;
 }
 
 #button-search:hover {
